# RustDirLister

./: Cargo.toml  README-RU.md  README.md
Releases/RDL-linux-x86-64/rdl_static/js/: script.js
Releases/RDL-linux-x86-64/templates/: index.html
Releases/rustdirlister-linux-x86-64/: RustDirLister
Releases/rustdirlister-linux-x86-64/rdl_static/js/: script.js
Releases/rustdirlister-linux-x86-64/templates/: login.html
rdl_static/css/: login.css  styles.css
src/: main.rs
templates/: index.html
zero-copy-prototype/: Cargo.toml  main.rs
