[package]
name = "RustDirLister"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7" , features = ["query"]}
tokio = {version =  "1.48.0", features = ["rt-multi-thread","fs","io-util"] }
tokio-util = { version = "0.7.17", features = ["io"] }
hyper = "1.8.1"
mime_guess = "2.0.5"
mime = "0.3.17"
once_cell = "1.21.3"
serde_json = "1.0.148"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
percent-encoding = "2.3.2"
walkdir = "2.5.0"
tower-cookies = { version = "0.11.0", features = ["signed"] }
headers = "0.4.1"
rand = "0.9.2"
tera = "1.20.1"


