[package]
name = "RustDirLister"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = {version =  "1.48.0", features = ["rt-multi-thread","fs","io-util"] }
anyhow = "1.0.100"
windows-sys = "0.61.2"
urlencoding = "2.1.3"
nix = "0.30.1"
hyper = "1.8.1"
hyper-util = "0.1.19"
once_cell = "1.21.3"


serde_json = "1.0.147"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"

askama = "0.15.0"
mime_guess = "2.0.5"
mime = "0.3.17"

libflate = "2.2.1"
core2 = "0.4.0"
httparse = "1.10.1"
httpdate = "1.0.3"